L’unicode n’est rendu correctement dans tous les IDE, cf.: http://stackoverflow.com/questions/15657107/css-content-special-character-hex-vs-normal-character

--- a/less/links.less
+++ b/less/links.less
@@ -32,20 +32,20 @@ a small { font-size: 90%; opacity: .9; }
 a[hreflang]:after { content: "\0000a0[" attr(hreflang) "]"; }
 
 /* External Links */
-a.external:after { content: "\0000a0➚"; }
-a[hreflang].external:after { content: "\0000a0[" attr(hreflang) "]\0000a0➚"; }
+a.external:after { content: "\0000a0\279A"; } // ➚ http://unicode-table.com/en/279A/
+a[hreflang].external:after { content: "\0000a0[" attr(hreflang) "]\0000a0\279A"; }
 
 /* mailto / tel */
-a.mailto:after { content: "\0000a0✉"; }
-a.tel:after { content: "\0000a0✆"; }
+a.mailto:after { content: "\0000a0\2709"; } // ✉ http://unicode-table.com/en/2709/
+a.tel:after { content: "\0000a0\2706"; } // ✆ http://unicode-table.com/en/2706/
 
 /* Documents */
-a.download:after { content: "\0000a0\21A7"; }
+a.download:after { content: "\0000a0\21A7"; } // ↧ http://unicode-table.com/en/21A7/
 a[hreflang].download:after { content: "\0000a0[" attr(hreflang) "]\0000a0\21A7"; }
-a.audio:after { content: "\0000a0♫"; }
-a[hreflang].audio:after { content: "\0000a0[" attr(hreflang) "]\0000a0♫"; }
-// a.video:after { content: "\0000a0▶"; }
-// a[hreflang].video:after { content: "\0000a0[" attr(hreflang) "]\0000a0▶"; }
+a.audio:after { content: "\0000a0\266B"; } // ♫ http://unicode-table.com/en/266B/
+a[hreflang].audio:after { content: "\0000a0[" attr(hreflang) "]\0000a0\266B"; }
+// a.video:after { content: "\0000a0\25B6"; } // ♫ http://unicode-table.com/en/25B6/
+// a[hreflang].video:after { content: "\0000a0[" attr(hreflang) "]\0000a0\25B6"; }
 
 /* Linked images */
 a img { border: 0; }
